[package]
name = "serial-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["serde_derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-serial = "5.4.4"
